[LS-23] - Feedback Loop Amendments + Improvements
Changes:
- added new banner to HomePage
- change data in several places
- upgrade research areas - if active, move to the right and prevent hover
- add translate script to use DeepL for new translations
- fix linking at footer and some HomePage buttons to link to apropriate lang versions
- update README.md file

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,11 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "translate": "node --env-file=.env.local scripts/translate.mjs",
+    "translate:all": "node --env-file=.env.local scripts/translate.mjs --all",
+    "translate:check": "node --env-file=.env.local scripts/translate.mjs --check",
+    "translate:reverse": "node --env-file=.env.local scripts/translate.mjs --reverse"
   },
   "dependencies": {
     "@sanity/client": "^7.13.1",
