[LS-24] - Update translate script + amendments
Changes:
- update translate script to properly translate missing translations and whole project if needed using DeepL
- fix styling of position in team card modal
- change data according to proper translations

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "translate": "node --env-file=.env.local scripts/translate.mjs",
     "translate:all": "node --env-file=.env.local scripts/translate.mjs --all",
     "translate:check": "node --env-file=.env.local scripts/translate.mjs --check",
-    "translate:reverse": "node --env-file=.env.local scripts/translate.mjs --reverse"
+    "translate:reverse": "node --env-file=.env.local scripts/translate.mjs --reverse",
+    "translate:force": "node --env-file=.env.local scripts/translate.mjs --all --force"
   },
   "dependencies": {
     "@sanity/client": "^7.13.1",
