--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,12 @@
     "translate:reverse": "node --env-file=.env.local scripts/translate.mjs --reverse",
     "translate:force": "node --env-file=.env.local scripts/translate.mjs --all --force"
   },
+  "browserslist": [
+    "chrome >= 90",
+    "edge >= 90",
+    "firefox >= 90",
+    "safari >= 14"
+  ],
   "dependencies": {
     "@sanity/client": "^7.13.1",
     "@sanity/image-url": "^2.0.1",
